# ehatrom

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  update_and_run.md  update_and_run.sh
.github/workflows/: ehatrom-rust.yml  github-release.yml  publish.yml
examples/: bare_metal_example.rs  create_advanced.rs  create_custom_atoms.rs  create_simple.rs  create_test.rs
src/: detect.rs  gpio.rs  lib.rs  main.rs  settings.rs
src/utils/: crc16.rs  crc32.rs  mod.rs
tests/: coverage.rs  empty_eeprom.rs  full_eeprom.rs  hat_golden.rs  no_alloc.rs  roundtrip.rs
tests/acceptance/: eepmake_compat.sh  sample_settings.txt
