[package]
name = "ehatrom"
version = "0.4.0"
edition = "2024"
description = "EEPROM library for Raspberry Pi HATs, byte-compatible with the official eepmake/eepdump format (atoms, per-atom CRC-16, I2C)"
repository = "https://github.com/4stm4/ehatrom"
homepage = "https://github.com/4stm4/ehatrom"
documentation = "https://docs.rs/ehatrom"
keywords = ["raspberry-pi", "eeprom", "hat", "i2c", "crc"]
categories = ["embedded", "hardware-support"]
readme = "README.md"
license = "MIT"
authors = ["Aleksei Zakharchenko <ehatrom@4stm4.ru>"]
exclude = [
  "tests/*",
  "Dockerfile*",
  "update_and_run.sh",
  "update_and_run.md"
]

[dependencies]
i2cdev = { version = "0.6", optional = true }

[features]
default = ["alloc"]
alloc = []
std = ["alloc"]
linux = ["i2cdev", "std"]

# The examples write files and print, and use the allocating API; they require
# `alloc` (and pull in std at link time). Declaring this lets
# `cargo test --no-default-features` skip them and run the no_std test suite.
[[example]]
name = "create_simple"
required-features = ["alloc"]

[[example]]
name = "create_test"
required-features = ["alloc"]

[[example]]
name = "create_custom_atoms"
required-features = ["alloc"]

[[example]]
name = "create_advanced"
required-features = ["alloc"]

[[example]]
name = "bare_metal_example"
required-features = ["alloc"]
